Version 0.10.0 (2014-03-XX)
---------------------------
Created new Tracker Protocol sub-project (#550)
Selected and integrated a JSON schema validation tool into the sub-project (#551) (TODO)
Implemented Grunt(#552) (TODO)
Implemented Intern(#553) (TODO)
Added ad impression JSON schema and tests (#554) (TODO)
Added ad click JSON schema and tests (#556) (TODO)
Added ad conversion JSON schema and tests (#556) (TODO)
Added JSON schema and tests to tracker-protocol (#557) (TODO)

Version 0.9.2 (2014-04-30)
--------------------------
Scala Hadoop Enrich: bumped to 0.5.0
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.3.0 (#699)
Scala Hadoop Enrich: bumped SBT to 0.13.2 (#702)
Scala Hadoop Enrich: bumped to using using sbt-assembly 0.11.2 (#704)
Scala Common Enrich: bumped to 0.4.0
Scala Common Enrich: upgraded to support new and future CloudFront file formats (#698)
Scala Common Enrich: bumped SBT to 0.13.2 (#703)
Scala Hadoop Bad Rows: added. Version 0.1.0
Hive Storage: bumped table-def.q to 0.1.0
Hive Storage: added new unstructured fields to Hive table definition (#709)
Hive Storage: added raw page_url and page_referrer into Hive table (#710)
Hive Storage: added name_tracker field to Hive table (#711)

Version 0.9.1 (2014-04-11)
--------------------------
Scala Hadoop Enrich: bumped to 0.4.0
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.3.0 (#497)
Scala Hadoop Enrich: renamed AnonQuartets to AnonOctets (#498)
Scala Hadoop Enrich: renamed all Snowplow Hadoop Tests to Specs (#515)
Scala Hadoop Enrich: added page_url and page_referrer back into ETL's output (#483)
Scala Common Enrich: bumped to 0.3.0
Scala Common Enrich: bumped Argonaut to 6.0.3 (#620) 
Scala Common Enrich: added app and mob as valid platform codes, thanks @kinabalu! (#524)
Scala Common Enrich: added support for remaining platform codes (#516)
Scala Common Enrich: updated POJO in Scalding ETL to include new unstructured fields (#362)